<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="permlab_bluetoothShareManager">Access download manager.</string>
    <string name="permdesc_bluetoothShareManager">Allows the application to access the BluetoothShare manager and to use it to transfer files.</string>
    <string name="bt_share_picker_label">Bluetooth</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknownNumber">Unknown</string>
    <string name="airplane_error_title">Airplane mode</string>
    <string name="airplane_error_msg">"You can't use Bluetooth when the phone is in airplane mode."</string>
    <string name="bt_enable_title">Bluetooth</string>
    <string name="bt_enable_line1">To use Bluetooth services, you must first turn on Bluetooth.</string>
    <string name="bt_enable_line2">Turn on Bluetooth now?</string>
    <string name="bt_enable_cancel">Cancel</string>
    <string name="bt_enable_ok">Turn on</string>
    <string name="incoming_file_confirm_title">File transfer</string>
    <string name="incoming_file_confirm_content">"\"%1$s\" wants to send you %2$s (%3$s). 

 Accept the file?"</string>
    <string name="incoming_file_confirm_cancel">Decline</string>
    <string name="incoming_file_confirm_ok">Accept</string>
    <string name="incoming_file_confirm_timeout_ok">Ok</string>
    <string name="incoming_file_confirm_timeout_content">There was a timeout while accepting an incoming file from \"%1$s\"</string>
    <string name="incoming_file_confirm_Notification_title">Bluetooth share: Incoming file</string>
    <string name="incoming_file_confirm_Notification_caption">Please confirm you want to receive this file</string>
    <string name="incoming_file_toast_msg">There is an incoming file from another device, please confirm that you want to receive this file</string>
    <string name="notification_receiving">Bluetooth share: Receiving %1$s</string>
    <string name="notification_received">Bluetooth share: Received %1$s</string>
    <string name="notification_received_complete">100% complete</string>
    <string name="notification_received_fail">Bluetooth share: File %1$s not received</string>
    <string name="notification_sending">Bluetooth share: Sending %1$s</string>
    <string name="notification_sending_multi">Bluetooth share: Sending file</string>
    <string name="notification_sent">Bluetooth share: Sent %1$s</string>
    <string name="notification_sent_complete">100% complete</string>
    <string name="notification_sent_fail">Bluetooth share: File %1$s not sent</string>
    <string name="download_title">File transfer</string>
    <string name="download_line1">From: \"%1$s\"</string>
    <string name="download_line2">File: %1$s</string>
    <string name="download_line3">File size: %1$s</string>
    <string name="download_line4" />
    <string name="download_line5">Receiving file…</string>
    <string name="download_cancel">Stop</string>
    <string name="download_ok">Hide</string>
    <string name="download_fail_line1">File not received</string>
    <string name="download_fail_line2">File: %1$s</string>
    <string name="download_fail_line3">Failure reason: %1$s</string>
    <string name="download_fail_ok">OK</string>
    <string name="download_succ_line5">File received</string>
    <string name="download_succ_ok">Open</string>
    <string name="upload_line1">To: \"%1$s\"</string>
    <string name="upload_line3">File Type: %1$s (%2$s)</string>
    <string name="upload_line5">Sending file…</string>
    <string name="upload_succ_line5">File sent</string>
    <string name="upload_succ_ok">OK</string>
    <string name="upload_fail_line1">The file was not sent to \"%1$s\".</string>
    <string name="upload_fail_line1_2">File: %1$s</string>
    <string name="upload_fail_ok">Try again</string>
    <string name="upload_fail_cancel">Close</string>
    <string name="bt_error_btn_ok">OK</string>
    <string name="unknown_file">Unknown file</string>
    <string name="unknown_file_desc">"There is no application to handle this file type. 
"</string>
    <string name="not_exist_file">File does not exist</string>
    <string name="not_exist_file_desc">"The file does not exist! 
"</string>
    <string name="enabling_progress_title">Please wait…</string>
    <string name="enabling_progress_content">Turning on bluetooth…</string>
    <string name="bt_toast_1">The file will be received. Check progress in the Notifications panel.</string>
    <string name="bt_toast_2">The file will not be received.</string>
    <string name="bt_toast_3">Stopped receiving file from \"%1$s\"</string>
    <string name="bt_toast_4">Sending file to \"%1$s\"</string>
    <string name="bt_toast_5">Sending %1$s files to \"%2$s\"</string>
    <string name="bt_toast_6">Stopped sending file to \"%1$s\"</string>
    <string name="bt_sm_2_1">There is not enough space on the SD card to save the file from \"%1$s\"</string>
    <string name="bt_sm_2_2">Space needed: %1$s</string>
    <string name="ErrorTooManyRequests">Too many requests are being processed. Try again later.</string>
    <string name="status_pending">File transfer not started yet</string>
    <string name="status_running">File transfer is ongoing</string>
    <string name="status_success">The file transfer has completed successfully</string>
    <string name="status_not_accept">"The phone can't handle this type of content"</string>
    <string name="status_forbidden">This transfer is forbidden by the target device</string>
    <string name="status_canceled">This transfer was canceled by the user</string>
    <string name="status_file_error">Storage issue</string>
    <string name="status_no_sd_card">No SD card. Insert an SD card to save transferred files.</string>
    <string name="status_connection_error">Connection failure</string>
    <string name="status_sd_card_full">There is not enough space on the SD card</string>
    <string name="status_protocol_error">The request can not be handled correctly</string>
    <string name="status_unknown_error">Unknown error</string>
    <string name="btopp_live_folder">Bluetooth received</string>
    <string name="download_success">%1$s Received complete.</string>
    <string name="upload_success">%1$s Sent complete.</string>
    <string name="inbound_history_title">Inbound transfers</string>
    <string name="outbound_history_title">Outbound transfers</string>
    <string name="no_transfers">Transfer history is empty.</string>
    <string name="transfer_clear_dlg_msg">All items will be cleared from the list.</string>
    <string name="outbound_noti_title">Bluetooth share: Sent files</string>
    <string name="inbound_noti_title">Bluetooth share: Received files</string>
    <string name="noti_caption">%1$s successful, %2$s failed.</string>
    <string name="transfer_menu_clear_all">Clear list</string>
    <string name="transfer_menu_open">Open</string>
    <string name="transfer_menu_clear">Clear from list</string>
    <string name="transfer_clear_dlg_title">Clear</string>
    <string name="bluetooth_share_file_name">bluetooth_content_share</string>
    <string name="bluetooth_save_path_music">我的音乐</string>
    <string name="bluetooth_save_path_image">我的图片</string>
    <string name="bluetooth_save_path_vedio">我的视频</string>
    <string name="bluetooth_save_path_book">我的书籍</string>
    <string name="bluetooth_save_path_theme">我的主题</string>
    <string name="bluetooth_save_path_recorder">我的录音</string>
    <string name="bluetooth_save_path_office">我的文档</string>
    <string name="bluetooth_save_path_other">我的下载</string>
    <string name="bluetooth_save_path_phone">Phone</string>
    <string name="bluetooth_save_path_card">Memory card</string>
    <string name="file_save_path">Save path: %1$s</string>
    <string name="file_incoming_in_statistic">%1$s files save in dir: %2$s</string>
    <string name="file_incoming_in_statistic_title">Receiving file is finished</string>
    <string name="file_incoming_in_statistic_lookup_button">Look up file</string>
    <string name="calendar_file_incoming_title">Received calendar file</string>
    <string name="received_calendar_file">Received calendar file: %1$s</string>
    <string name="import_calendar_file_to_calendar">Import to calendar</string>
    <string name="save_as_file">Save as file</string>
    <string name="contact_file_incoming_title">Received contact file</string>
    <string name="received_contact_file">Received contact file: %1$s</string>
    <string name="import_contact_file_to_sim_card">Import to SIM card</string>
    <string name="import_contact_file_to_phone">Import to Phone</string>
    <string name="upload_fail">Bluetooth share: All files are not sent successfully!</string>
    <string name="clearing_history">Clearing history...</string>
    <string name="clear_history">Clear history</string>
    <string name="sharedUserId" />
    <string name="process" />
    <string name="status_phone_full">There is not enough space on the Phone</string>
    <string name="bt_sm_2_1_phone">There is not enough space on the Phone to save the file from \"%1$s\"</string>
    <string name="file_encrypted">The folder has been encrypted.</string>
    <string name="pbap_acceptance_dialog_title">%1$s would like to access your contacts and call history. Give access to %2$s?</string>
    <string name="pbap_acceptance_dialog_header">Phonebook Access</string>
    <string name="pbap_session_key_dialog_title">Type session key for %1$s</string>
    <string name="pbap_session_key_dialog_header">Bluetooth session key required</string>
    <string name="pbap_acceptance_timeout_message">There was time out to accept connection with %1$s</string>
    <string name="pbap_authentication_timeout_message">There was time out to input session key with %1$s</string>
    <string name="pbap_notif_ticker">Phonebook access request</string>
    <string name="pbap_notif_title">PBAP request</string>
    <string name="pbap_notif_message">Allow phonebook access by %1$s</string>
    <string name="auth_notif_ticker">Obex authentication request</string>
    <string name="auth_notif_title">Session Key</string>
    <string name="auth_notif_message">Type session key for %1$s</string>
    <string name="alwaysallowed">Always allowed?</string>
    <string name="defaultname">Carkit</string>
    <string name="unknownName">Unknown name</string>
    <string name="localPhoneName">My name</string>
    <string name="defaultnumber">000000</string>
    <string name="hello">Hello World, TestActivity</string>
    <string name="app_name">Bluetooth Share</string>
    <string name="insert_record">Insert record</string>
    <string name="update_record">Confirm record</string>
    <string name="ack_record">Ack record</string>
    <string name="deleteAll_record">Delete all record</string>
    <string name="ok_button">OK</string>
    <string name="delete_record">Delete record</string>
    <string name="start_server">Start TCP server</string>
    <string name="notify_server">Notify TCP server</string>
</resources>
