<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@android:color/alert_dialog_content_bg_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@android:color/oppo_alert_dialog_content_text_color" android:id="@id/line1_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:text="@string/download_line1" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@android:color/oppo_alert_dialog_content_text_color" android:id="@id/line_dir_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:text="@string/file_save_path" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@android:color/oppo_alert_dialog_content_text_color" android:id="@id/line2_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:text="@string/download_line2" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@android:color/oppo_alert_dialog_content_text_color" android:id="@id/line3_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:text="@string/download_line3" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@android:color/oppo_alert_dialog_content_text_color" android:id="@id/line4_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:text="@string/download_line4" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@android:color/oppo_alert_dialog_content_text_color" android:gravity="center" android:id="@id/line5_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:text="@string/download_line5" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@android:color/oppo_alert_dialog_content_text_color" android:gravity="left" android:id="@id/progress_percent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" />
            <ProgressBar android:id="@id/progress_transfer" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="20.0dip" android:max="100" android:progress="100" android:layout_weight="1.0" style="?android:attr/progressBarStyleHorizontal" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
